--- a/keystrokes/src/stylesheets/App.css
+++ b/keystrokes/src/stylesheets/App.css
@@ -1,17 +1,28 @@
 .App {
-  text-align: center;
-  font-size: large;
-  font-size: 5.5em;
+	text-align: center;
+	font-size: large;
+	font-size: 5.5em;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+	background-color: #222;
+	height: 150px;
+	padding: 20px;
+	color: white;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+nav {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background: grey;
+	color: white;
+}
+
+.nav-links {
+	width: 50%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	list-style: none;
 }
