--- a/keystrokes/src/stylesheets/character.css
+++ b/keystrokes/src/stylesheets/character.css
@@ -4,3 +4,11 @@
 	justify-content: center;
 	list-style: none;
 }
+
+.character-list {
+	padding-left: 25%;
+	padding-right: 25%;
+	width: 50%;
+	display: flex;
+	justify-content: center;
+}
